tests/language_modules/19_big_numbers/invalid_semantics/big_argument_type.vf
module BigArgumentType

procedure main()
is
    let left: BigInteger = Big.int("1")
    let sum: BigInteger = Big.addInt(left, 2)
end main

end BigArgumentType
